fixed proportions on mobile, improved functions and added better removing of books

--- a/styles/bookForm.css
+++ b/styles/bookForm.css
@@ -1,153 +1,193 @@
 .form__container {
-  position: fixed;
-  width: 50%;
-  height: 60%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
+	position: fixed;
+	width: 50%;
+	height: 60%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: row;
 }
 
 .form__container img {
-  width: 40%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 5px 0 0 5px;
+	width: 40%;
+	height: 100%;
+	object-fit: cover;
+	border-radius: 5px 0 0 5px;
 }
 
 .form__container .create__book {
-  position: relative;
-  height: 100%;
-  width: 60%;
-  background-color: var(--white);
-  padding: 40px 50px 10px 50px;
-  border-radius: 0 5px 5px 0;
-  color: #222;
+	position: relative;
+	height: 100%;
+	width: 60%;
+	background-color: var(--white);
+	padding: 40px 50px 10px 50px;
+	border-radius: 0 5px 5px 0;
+	color: #222;
 }
 
 .form__container .btn__close__form {
-  position: absolute;
-  background: transparent;
-  top: 0px;
-  right: 10px;
-  font-size: 1.6em;
-  border: none;
-  cursor: cell;
-  transition: 300ms ease all;
+	position: absolute;
+	background: transparent;
+	top: 0px;
+	right: 10px;
+	font-size: 1.6em;
+	border: none;
+	cursor: cell;
+	transition: 300ms ease all;
 }
 
 .form__container .btn__close__form:hover {
-  transform: rotate(180deg) scale(1.4);
-  color: rgb(197, 43, 23);
+	transform: /*rotate(180deg)*/ scale(1.4);
+	color: rgb(197, 43, 23);
 }
 
 .form__container .btn__delete__item {
-  position: absolute;
-  background: transparent;
-  bottom: 10px;
-  right: 10px;
-  font-size: 1.6em;
-  border: none;
-  cursor: cell;
-  transition: 300ms ease all;
+	position: absolute;
+	background: transparent;
+	bottom: 10px;
+	right: 10px;
+	font-size: 1.6em;
+	border: none;
+	cursor: cell;
+	transition: 300ms ease all;
 }
 
 .form__container .btn__delete__item:hover {
-  transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .create__book h3 {
-  font-family: "Times New Roman", Times, serif;
-  font-size: 2.5em;
-  margin-bottom: 40px;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 2.5em;
+	margin-bottom: 40px;
 }
 
 .create__book form {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-  row-gap: 20px;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: space-between;
+	row-gap: 20px;
 }
 
 .create__book form div {
-  display: inline-block;
-  position: relative;
-  width: 45%;
-  height: 60px;
+	display: inline-block;
+	position: relative;
+	width: 45%;
+	height: 60px;
 }
 
 .create__book .checkbox__form__div {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  flex-direction: row;
+	display: flex;
+	align-items: center;
+	justify-content: left;
+	flex-direction: row;
 }
 
 .create__book form input,
 .create__book form select {
-  width: 100%;
-  height: 40px;
-  /* margin: 5px 0 20px 0; */
-  padding: 0 4px;
+	width: 100%;
+	height: 40px;
+	/* margin: 5px 0 20px 0; */
+	padding: 0 4px;
+}
+
+.create__book .checkbox {
+	margin-right: 5px;
 }
 
 .create__book form input[type="checkbox"] {
-  width: 20px;
-  height: 20px;
+	width: 20px;
+	height: 20px;
 }
 
 .create__book .btn__add__book {
-  position: absolute;
-  width: 50%;
-  height: 60px;
-  left: 50%;
-  bottom: -30px;
-  transform: translateX(-50%);
-  font-size: 1.4em;
-  font-weight: 500;
-  border: none;
-  background-color: var(--green);
-  color: var(--white);
-  z-index: 100;
-  cursor: pointer;
+	position: absolute;
+	width: 50%;
+	height: 60px;
+	left: 50%;
+	bottom: -30px;
+	transform: translateX(-50%);
+	font-size: 1.4em;
+	font-weight: 500;
+	border: none;
+	background-color: var(--green);
+	color: var(--white);
+	z-index: 100;
+	cursor: pointer;
 }
 
 .hidden {
-  display: none !important  ;
+	display: none !important  ;
 }
 
 .large__btn {
-  border: 1px solid rgb(0, 0, 0);
-  background-color: white;
-  padding: 10px;
-  font-size: 1.4em;
-  cursor: pointer;
+	border: 1px solid rgb(0, 0, 0);
+	background-color: white;
+	padding: 10px;
+	font-size: 1.4em;
+	cursor: pointer;
 }
 
 .danger__btn {
-  color: rgb(99, 14, 14) !important;
-  border-color: rgb(99, 14, 14);
-  background-color: #ff8080;
+	color: rgb(99, 14, 14) !important;
+	border-color: rgb(99, 14, 14);
+	background-color: #ff8080;
 }
 
 .create__btn {
-  color: var(--green) !important;
-  border-color: var(--green);
-  background-color: #80ff80;
+	color: var(--green) !important;
+	border-color: var(--green);
+	background-color: #80ff80;
+}
+
+@media screen and (max-height: 700px) {
+	.form__container {
+		height: 80%;
+	}
 }
 
 @media screen and (max-width: 1450px) {
-  .form__container {
-    width: 70%;
-  }
+	.form__container {
+		width: 70%;
+	}
 }
 
 @media screen and (max-width: 1000px) {
-  .form__container {
-    width: 90%;
-  }
+	.form__container {
+		width: 90%;
+	}
+}
+
+@media screen and (max-width: 850px) {
+	.form__container {
+		width: 80%;
+		height: 80%;
+	}
+
+	.form__container .create__book form div {
+		width: 100%;
+	}
+
+	.form__container .create__book form {
+		flex-direction: column;
+	}
+}
+
+@media screen and (max-width: 670px) {
+	.form__container {
+		width: 95%;
+	}
+
+	.form__container img {
+		width: 0%;
+		display: none;
+	}
+
+	.form__container .create__book {
+		width: 100%;
+	}
 }
